// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mikado translator can translate a single goal 1`] = `
"digraph G {
   Goal [peripheries=2, shape=oval, label=\\"The goal\\", style=filled, fillcolor=lightblue];

}"
`;

exports[`mikado translator gives a readable error if no goal is defined 1`] = `"Mikado graph needs exactly one Goal"`;

exports[`mikado translator handles single done prerequisite 1`] = `
"digraph G {
   Goal [peripheries=2, shape=oval, label=\\"A goal\\", style=filled, fillcolor=lightblue];
Format [label=\\"Format the file for readability\\"]
Format -> Goal [dir=back]
Format [style=filled, fillcolor=green]

}"
`;

exports[`mikado translator handles single prerequisite 1`] = `
"digraph G {
   Goal [peripheries=2, shape=oval, label=\\"A goal\\", style=filled, fillcolor=lightblue];
Format [label=\\"Format the file for readability\\"]
Format -> Goal [dir=back]

}"
`;
